--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@nestjs/common": "^10.3.7",
     "@nestjs/core": "^10.3.7",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/platform-express": "^10.3.7"
+    "@nestjs/platform-express": "^10.3.7",
+    "@nestjs/swagger": "^7.3.1",
+    "@prisma/client": "5.11.0",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.2",
     "@types/node": "^20.12.2",
+    "prisma": "5.11.0",
     "typescript": "^5.4.3"
   }
 }
