--- a/package.json
+++ b/package.json
@@ -15,14 +15,22 @@
     "@nestjs/common": "^10.3.7",
     "@nestjs/core": "^10.3.7",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.7",
     "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "5.11.0",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.2",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.12.2",
+    "@types/passport-jwt": "^4.0.1",
     "prisma": "5.11.0",
     "typescript": "^5.4.3"
   }
